--- a/src/Layouts/Layout.module.scss
+++ b/src/Layouts/Layout.module.scss
@@ -7,6 +7,8 @@
     margin-top: 1.5rem;
     img {
       cursor: pointer;
+      background-color: black;
+      border-radius: 50%;
     }
   }
   main {
