--- a/src/Pages/YourCard/YourCard.module.scss
+++ b/src/Pages/YourCard/YourCard.module.scss
@@ -8,26 +8,55 @@
   background-size: cover;
   background-attachment: fixed;
 
-  .editCardBtn {
-    margin: 2rem auto;
-    background: black;
-    color: white;
-    width: 205px;
-    border: 1px solid;
-    border-radius: 60px;
-    justify-content: center;
-    align-items: center;
+  .btns {
     display: flex;
-    padding: 1rem;
-    cursor: pointer;
-    img {
-      filter: invert(1);
-      width: 37px;
-      height: 37px;
-      margin: 0 0.5rem;
+    justify-content: center;
+    gap: 1rem;
+    margin: 2rem auto;
+    .shareCardBtn {
+      background: black;
+      color: white;
+      width: 200px;
+      border: 1px solid;
+      border-radius: 60px;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      padding: 1rem;
+      cursor: pointer;
+      img {
+        filter: invert(1);
+        width: 30px;
+        height: 30px;
+        padding: 0.25rem;
+        margin: 0 0.5rem;
+      }
+      span {
+        font-size: 1.1rem;
+      }
     }
-    span {
-      font-size: 1.1rem;
+
+    .editCardBtn {
+      background: black;
+      color: white;
+      width: 240px;
+      border: 1px solid;
+      border-radius: 60px;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      padding: 1rem;
+      cursor: pointer;
+      img {
+        filter: invert(1);
+        width: 30px;
+        height: 30px;
+        padding: 0.25rem;
+        margin: 0 0.5rem;
+      }
+      span {
+        font-size: 1.1rem;
+      }
     }
   }
 }
