create card component updated

--- a/src/Pages/QR_code/QR_code.module.scss
+++ b/src/Pages/QR_code/QR_code.module.scss
@@ -5,7 +5,13 @@
   align-items: center;
   gap: 2rem;
   h1 {
-    margin: 3rem 0;
+    margin: 2rem 0;
   }
-
+  .qr_code {
+    margin: 1rem 0;
+    border: 2px solid;
+    background: rgb(232, 232, 255);
+    padding: 1rem;
+    border-radius: 1rem;
+  }
 }
